--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <form id="form">
         <h1 class="text-dark fw-bold" id="title">Register</h1><br>
             <div class="text-dark fw-bold form-group">
-                <p> FIRST NAME : <input class="text-dark fw-bold bg-light form-group" type="text" id="first-name" placeholder="Ex: Kaveen" required></p>
-                <p> LAST NAME : <input class="text-dark fw-bold bg-light form-group" type="text" id="last-name" placeholder="Ex: Raj" required></p>
+                <p> FIRST NAME : <input class="text-dark fw-bold bg-light form-group" type="text" id="first-name" placeholder="Ex: Anitha" required></p>
+                <p> LAST NAME : <input class="text-dark fw-bold bg-light form-group" type="text" id="last-name" placeholder="Ex:Kumar" required></p>
                 <p> MALE : <input type="radio" name="male" id="gender"   ></p>
                 <p> FEMALE : <input type="radio" name="female" id="gender"  ></p>
                 <p>FOODS : <input class="text-dark fw-bold bg-light" type="text" id="food" placeholder="Ex: Dosa" maxlength="10" required></p>
                 <p>NATIVE STATE  : <input class="text-dark fw-bold bg-light" type="text" id="state" placeholder="Ex: Tamil Nadu" required></p>
                 <p>COUNTRY : <input class="text-dark fw-bold bg-light" type="text" id="country" placeholder="Ex: India" required></p>
-                <p> PINCODE : <input class="text-dark fw-bold bg-light" type="text" id="pincode" placeholder="Ex: 638000" required maxlength="6"></p>
-                 <textarea class="text-dark fw-bold bg-light" type="textarea" id="address" placeholder="Ex: Chithode" required></textarea>
+                <p> PINCODE : <input class="text-dark fw-bold bg-light" type="text" id="pincode" placeholder="Ex: 600083" required maxlength="6"></p>
+                 <textarea class="text-dark fw-bold bg-light" type="textarea" id="address" placeholder="Ex: Chennai" required></textarea>
                 </div><br>     
         <div class="btn btn-primary" id="submit"><button >Submit</button></div>
     </form>
